syntax = "proto3";

option csharp_namespace = "AuthApi";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetJwks(GetJwksRequest) returns (GetJwksResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string refreshToken = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {}

message ResetPasswordRequest {
  string token = 1;
  string newPassword = 2;
}

message ResetPasswordResponse {}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool isValid = 1;
}

message GetJwksRequest {}

message GetJwksResponse {
    string jwks = 1;
}
